# differential-privacy

./: 3d.py  LICENSE  README  README.md  above_threshold_model.py  abovethreshold.py  accuracy.py  accuracy_precompute.py  algorithms.py  algorithms_experiment.py  algorithms_test.py  aol.py  bms-pos.py  clean.py  count_kosarak.py  data_count_bms-pos.py  data_flatten.py  data_get.sh  data_histogram_aol.py  data_histogram_kosarak.py  dataset_accuracy.py  error_rate.py  experiments.py  gui.py  gui_reportnoisymax.py  gui_single.py  gui_svt.py  histogram_aol.py  histogram_bms-pos.py  histogram_kosarak.py  integration.py  kosarak.py  laplace.py  laplace_gaussian.py  naive.py  naive_test.py  plot.py  plot_error_rate_discontinuity.py  plot_reportnoisymax_exp_example.py  report_noisy_max_exp_model.py  (+7 more)
