[metadata]
name = diffpriv
author = Valentin Gagarin
summary = Experiments with Differentially Private Algorithms
classifier =
  License :: Other/Proprietary License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Mathematics


[entry_points]
console_scripts =
  difffpriv-single = gui_single:main
  diffpriv-reportnoisymax = gui_reportnoisymax:main
  diffpriv-svt = gui_svt:main
